Adição do módulo de cadastro de convidados

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+	<title>Eventos App</title>
 	 <!-- Links Materialize -->
 	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
@@ -14,7 +15,7 @@
 <body>
 	<h1>Lista de Eventos</h1>
 	<h3><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Evento</a></h3>
-	<table class="highlight">
+	<table class="highlight container">
 		<thead>
 			<tr>
 				<th>Nome</th>
@@ -25,7 +26,7 @@
 		</thead>
 		<tbody>
 			<tr th:each="evento : ${eventos}">
-				<td><span th:text="${evento.nome}"></span></td>
+				<td><a th:href="@{detalhesEvento/{id}(id = ${evento.id})}"><span th:text="${evento.nome}"></span></a></td>
 				<td><span th:text="${evento.local}"></span></td>
 				<td><span th:text="${evento.data}"></span></td>
 				<td><span th:text="${evento.horario}"></span></td>
