--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -18,14 +18,20 @@
 
 	<h1> Cadastro de Eventos </h1>
 	<h3><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Listar Eventos</a></h3>
-	<form method="post" >
-		Nome: <input type="text" value="" name="nome"/>
-		Local: <input type="text" value="" name="local"/>
-		Data: <input type="date" value="" name="data"/>
-		Horario: <input type="text" value="" name="horario"/>
-		
-	
-		<button type="submit" >Salvar</button>
+	<form class="container" method="post" >
+		<div class="row">
+			Nome: <input type="text" value="" name="nome"/>
+			<div class="input-field col s6">
+				Local: <input type="text" value="" name="local"/>
+			</div>
+			<div class="input-field col s3">
+				Data: <input type="date" value="" name="data"/>
+			</div>
+			<div class="input-field col s3">
+				Horario: <input type="text" value="" name="horario"/>
+			</div>
+		</div>
+		<button class="waves-effect waves-light btn" type="submit" >Salvar</button>
 	</form>
 	<!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
