--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -23,12 +23,24 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
-	<form method="post">
-		Nome do convidado: <input type="text" value="" name="nomeConvidado"/>
-		RG do convidado: <input type="number" value="" name="rg"/>
-		
-		<button type="submit" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Adicionar Convidado</button>
-	</form>
+		<form method="post">
+			Nome do convidado: <input type="text" value="" name="nomeConvidado"/>
+			RG do convidado: <input type="number" value="" name="rg"/>
+			
+			<button type="submit" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Adicionar Convidado</button>
+		</form>
+	</div>
+	<br/>
+	<h5 class="container">Lista de Participantes</h5>
+	<div class="container" th:each="convidado : ${convidados}">
+		<div class="row">
+			<div class="input-field col s6">
+				<p>Nome: <span th:text="${convidado.nomeConvidado}"></span></p>
+			</div>
+			<div class="input-field col s3">
+				<p>RG: <span th:text="${convidado.rg}"></span></p>
+			</div>		
+		</div>
 	</div>
 	<!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="../materialize/js/materialize.min.js"></script>
