--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -10,12 +10,23 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      
+      <!-- Estilo personalizado  -->
+      <link rel="stylesheet" href="../style/styles.css">
 	<title>Eventos App</title>
 </head>
 <body>
-	<h1>Lista de Eventos</h1>
-	<h3><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Listar Eventos</a></h3>
-	<div th:each="evento : ${evento}" class="container">
+<header>
+		<nav>
+			<div class="nav-wrapper">
+				<a href="#" class="brand-logo">Detalhes dos Eventos</a>
+				<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li><a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">format_list_bulleted</i>Listar Eventos</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
+	<div th:each="evento : ${evento}" class="container detalhesEvento">
 		<div class="row" >
 			<h5>Detalhes do Evento</h5>
 			<p>Evento: <span th:text="${evento.nome}"></span></p>
@@ -23,34 +34,41 @@
 			<p>Data: <span th:text="${evento.data}"></span></p>
 			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
+	</div>
+	<div class="container formConvidado">
 		<!-- Desta Forma não deu certo.  -->
 		<!-- <th:block th:include="mensagemValidacao" > </th:block> -->
 		
 		<!-- Desta forma a mensagem é exibida -->
 		<div class="alert alert-danger ef9a9a red lighten-3" style="text-align:center" role="alert" th:text="${erro}" th:if="${erro}"></div>
+		<div class="alert alert-primary 69f0ae green accent-2" role="alert" th:text="${sucesso}" th:if="${sucesso}"></div> 
 		
-		<div class="alert alert-primary 69f0ae green accent-2" role="alert" th:text="${sucesso}" th:if="${sucesso}"></div>
-		
-		<form method="post">
-			Nome do convidado: <input type="text" value="" name="nomeConvidado"/>
-			RG do convidado: <input type="number" value="" name="rg"/>
+		<form method="post" th:object="${convidado}">
+			Nome do convidado: <input type="text" value="" name="nomeConvidado" placeholder="Nome Completo"/>
+			RG do convidado: <input type="number" value="" name="rg" placeholder="999999"/>
 			
 			<button type="submit" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Adicionar Convidado</button>
 		</form>
 	</div>
+	
 	<br/>
-	<h5 class="container">Lista de Participantes</h5>
-	<div class="container" th:each="convidado : ${convidados}">
-		<div class="row">
-			
-			<div class="input-field col s6">
-				<p>Nome: <span th:text="${convidado.nomeConvidado}"></span></p>
-			</div>
-			<div class="input-field col s3">
-				<p>RG: <span th:text="${convidado.rg}"></span></p>
-			</div>		
-		</div>
-	</div>
+	<table class="container tabelaConvidado">
+		<thead>
+			<tr> 
+				<th colspan="2" style="text-align:center"> Lista de Convidados </th>
+			</tr>
+			<tr>				
+				<th>Nome do Convidado</th>
+				<th>RG</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="convidado : ${convidados}">
+				<td><span th:text="${convidado.nomeConvidado}"> </span></td>
+				<td><span th:text="${convidado.rg}"> </span></td>
+			</tr>
+		</tbody>
+	</table>
 	<!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="../materialize/js/materialize.min.js"></script>
 </body>
