Implementação do modulo de deleção de convidado

--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -67,7 +67,7 @@
 			<tr th:each="convidado : ${convidados}">
 				<td><span th:text="${convidado.nomeConvidado}"> </span></td>
 				<td><span th:text="${convidado.rg}"> </span></td>
-				<td><a th:href="@{deletarConvidado/{rg}(rg = ${convidado.rg})}"><i class="material-icons left">delete</i></a></td>
+				<td><a th:href="@{/{rg}(rg = ${convidado.rg})}"><i class="material-icons left">delete</i></a></td>
 			</tr>
 		</tbody>
 	</table>
